rust/dbn-macros/tests/ui/json_serialize_conflicting_dbn_attr.stderr
error: Passed incompatible serialization arguments to dbn attr
 --> tests/ui/json_serialize_conflicting_dbn_attr.rs:6:5
  |
6 |     #[dbn(fixed_price, unix_nanos)]
  |     ^
